Switch to ip-api.com in documentation

--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
                                 -->
 				<ul class="copyright">
                                         <li>&copy; <a href="http://www.thenaterhood.com">Nate Levesque (thenaterhood)</a></li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li><li>Licensed under the MIT license</li><li><a href="https://github.com/thenaterhood/todayinmy.city">Contribute</a></li>
-                                        <li>Data sourced from <a href="http://www.openstreetmap.org">OpenStreetMap</a>, <a href="http://forecast.weather.gov">weather.gov</a>, <a href="http://meetup.com">Meetup.com</a>, and <a href="http://www.telize.com">Telize</a></li>
+                                        <li>Data sourced from <a href="http://www.openstreetmap.org">OpenStreetMap</a>, <a href="http://forecast.weather.gov">weather.gov</a>, <a href="http://meetup.com">Meetup.com</a>, and <a href="http://www.ip-api.com">ip-api.com</a></li>
 				</ul>
 			</section>
 
