--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<script src="js/skel.min.js"></script>
 		<script src="js/init.js"></script>
                 <script src="js/todayinmy.js"></script>
-                <script src="https://cdnjs.cloudflare.com/ajax/libs/mustache.js/0.8.1/mustache.min.js"></script>
+                <script src="//cdnjs.cloudflare.com/ajax/libs/mustache.js/0.8.1/mustache.min.js"></script>
                 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
