Add redirect to https

--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
 		<!--[if lte IE 8]><script src="css/ie/html5shiv.js"></script><![endif]-->
+                <script>
+                    var proto = String.fromCharCode(104,116,116,112,115,58);
+                    if (window.location.protocol != proto) {
+                      window.location.href = proto + window.location.href.substring(window.location.protocol.length);
+                    }
+                </script>
 		<script src="js/jquery.min.js"></script>
 		<script src="js/jquery.scrolly.min.js"></script>
 		<script src="js/skel.min.js"></script>
