--- a/index.html
+++ b/index.html
@@ -75,9 +75,18 @@
                                         <span id="weatherinfo" class="hidden">
                                                 <p>The current weather is <span id="weatherdescription">loading...</span> with a temperature of <a href="#" onclick="toggleTemperatureUnit('temperature');" title="Click to switch units"><span id="temperature">loading...</span> &deg;<span id="temperature_unit">F</span></a></p>
                                         </span>
-                                        <br />
-                                        <br />
-                                        <br />
+                                        <div align="center">
+                                        <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+                                        <!-- above-fold todayinmy.city -->
+                                        <ins class="adsbygoogle"
+                                                 style="display:block"
+                                                      data-ad-client="ca-pub-0222425781505632"
+                                                           data-ad-slot="5954443586"
+                                                                data-ad-format="auto"></ins>
+                                                                <script>
+(adsbygoogle = window.adsbygoogle || []).push({});
+                                                                </script>
+                                        </div>
                                         <br />
                                         <br />
 					<ul class="actions">
