--- a/index.html
+++ b/index.html
@@ -14,13 +14,14 @@
                 <script>
                     var proto = String.fromCharCode(104,116,116,112,115,58);
                     if (window.location.protocol != proto) {
-                      window.location.href = proto + window.location.href.substring(window.location.protocol.length);
+//                      window.location.href = proto + window.location.href.substring(window.location.protocol.length);
                     }
                 </script>
 		<script src="js/jquery.min.js"></script>
 		<script src="js/jquery.scrolly.min.js"></script>
 		<script src="js/skel.min.js"></script>
 		<script src="js/init.js"></script>
+                <script src="js/wikipedia.js"></script>
                 <script src="js/todayinmy.js"></script>
                 <script src="//cdnjs.cloudflare.com/ajax/libs/mustache.js/0.8.1/mustache.min.js"></script>
                 <script>
@@ -73,9 +74,11 @@
                                                 </noscript>
                                         </span>
                                         <span id="weatherinfo" class="hidden">
-                                                <p>The current weather is <span id="weatherdescription">loading...</span> with a temperature of <a href="#" onclick="toggleTemperatureUnit('temperature');" title="Click to switch units"><span id="temperature">loading...</span> &deg;<span id="temperature_unit">F</span></a></p>
+                                                <p>The current weather is <span id="weatherdescription">loading...</span> with a temperature of <a href="#" onclick="toggleTemperatureUnit('temperature');" title="Click to switch units"><span id="temperature">loading...</span> &deg;<span id="temperature_unit">F</span></a>.</p>
                                                 <br />
                                         </span>
+                                        <span id="cityinfo"></span>
+                                        <span id="cityinfo_more"></span>
                                         <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
                                         <!-- above-fold todayinmy.city -->
                                         <ins class="adsbygoogle"
