--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@ $(document).ready(function() {
                         <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
                         <!-- above-fold todayinmy.city -->
                         <ins class="adsbygoogle"
-                             style="display:block;"
+                             style="display:block"
                              data-ad-client="ca-pub-0222425781505632"
                              data-ad-slot="5954443586"
                              data-ad-format="auto"></ins>
