Better ad slots

--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@ $(document).ready(function() {
             </section>
             <!-- Main -->
             <div id="main">
-                <section id="three">
-                    <div class="inner">
+                <section id="four">
+                    <div>
                         <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
                         <!-- above-fold todayinmy.city -->
                         <ins class="adsbygoogle"
@@ -125,7 +125,7 @@ $(document).ready(function() {
                 </section>
                 <!-- Two -->
                 <section id="three">
-                    <div class="inner">
+                    <div>
                         <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
                         <!-- belowfold-todayinmycity -->
                         <ins class="adsbygoogle"
