Loads ads synchronously?

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@ $(document).ready(function() {
             </section>
             <!-- Main -->
             <div id="main">
-                <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+                <script src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
                 <!-- above-fold todayinmy.city -->
                 <ins class="adsbygoogle"
                      style="display:block"
@@ -120,7 +120,7 @@ $(document).ready(function() {
                     </article>
                 </section>
                 <!-- Two -->
-                <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+                <script src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
                 <!-- belowfold-todayinmycity -->
                 <ins class="adsbygoogle"
                      style="display:block"
