--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
         <!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
         <!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
         <script src="/assets/js/config.js"></script>
+        <script src="assets/js/jquery.min.js"></script>
+
         <script>
 var proto = String.fromCharCode(104,116,116,112,115,58);
 if (window.location.protocol != proto && CONFIG.redirect_to_https) {
@@ -29,7 +31,6 @@ ga('create', 'UA-5020962-10', 'auto');
 ga('send', 'pageview');
         </script>
         <script src="//cdnjs.cloudflare.com/ajax/libs/mustache.js/0.8.1/mustache.min.js"></script>
-        <script src="/assets/js/jquery.min.js"></script>
         <script src="/assets/js/wikipedia.js"></script>
         <script src="/assets/js/todayinmy.js"></script>
         <script type="application/javascript">
@@ -91,7 +92,7 @@ $(document).ready(function() {
             </section>
             <!-- Main -->
             <div id="main">
-                <script src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+                <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
                 <!-- above-fold todayinmy.city -->
                 <ins class="adsbygoogle"
                      style="display:block"
@@ -120,7 +121,7 @@ $(document).ready(function() {
                     </article>
                 </section>
                 <!-- Two -->
-                <script src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+                <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
                 <!-- belowfold-todayinmycity -->
                 <ins class="adsbygoogle"
                      style="display:block"
@@ -158,12 +159,11 @@ $(document).ready(function() {
             </footer>
         </div>
         <!-- Scripts -->
-        <script src="assets/js/jquery.min.js"></script>
         <script src="assets/js/jquery.scrolly.min.js"></script>
         <script src="assets/js/jquery.scrollex.min.js"></script>
         <script src="assets/js/skel.min.js"></script>
         <script src="assets/js/util.js"></script>
         <!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
-        <!--<script src="assets/js/main.js"></script>-->
+        <script src="assets/js/main.js"></script>
     </body>
 </html>
