Click here if nothing happens now does zipcode

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ ga('send', 'pageview');
                         </span>
                         <span id="locateme">
                             <p><img src="/assets/images/ajax-loader.gif" />Locating you...</p>
-                            <p><a onclick="getDataGeoip();">Click here if nothing happens</a></p>
+                            <p><a onclick="doZipcodeInput();">Click here if nothing happens</a></p>
                             <noscript>
                                 <p>This website requires Javascript</p>
                             </noscript>
